[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Fonts/OpenSans-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Ingredients/ingredient_water.png" type="Texture" id=2]
[ext_resource path="res://ResourceShelf.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 32.0
height = 0.0

[sub_resource type="DynamicFont" id=2]
size = 24
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
font_data = ExtResource( 1 )

[node name="ResourceForShelf" type="Node2D"]
z_index = -1
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )
centered = false

[node name="ResourceArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ResourceArea"]
position = Vector2( 32, 32 )
shape = SubResource( 1 )

[node name="LabelHolder" type="Node2D" parent="."]
z_index = 10

[node name="Label" type="Label" parent="LabelHolder"]
margin_left = -208.0
margin_right = -8.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 2 )
text = "Water"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_entered" from="ResourceArea" to="." method="_on_ResourceArea_area_entered"]
[connection signal="area_exited" from="ResourceArea" to="." method="_on_ResourceArea_area_exited"]
[connection signal="input_event" from="ResourceArea" to="." method="_on_ResourceArea_input_event"]
